<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.list.ListFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
        android:id="@+id/textView"
        android:layout_width="380dp"
        android:layout_height="25dp"
        android:text="@string/textview"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="0dp"
        android:layout_gravity="center"
            android:visibility="gone"/>

        <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="115dp"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_gravity="center"
            android:visibility="gone"
        tools:ignore="ExtraText">

        <Button
            android:id="@+id/button"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/date" />

        <Button
            android:id="@+id/button1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:text="@string/travel_place" />

        <Button
            android:id="@+id/button2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="5dp"
            android:text="@string/people_count" />

        <Button
            android:id="@+id/button3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="5dp"
            android:text="@string/pay" />

        </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/travel_Record"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/travel_record"
            android:textColor="#2DF300" />

        <Button
            android:id="@+id/time_Line"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/time_line"

            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="586dp"
            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/outerRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="647dp">


            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>